# research-pipeline

./: .env.example  .gitignore  CONTEXT.md  HANDOFF.md  MAP-phase2.md  MAP.md  README.md  pyproject.toml
docs/: verifier-sota-architecture-2026.md
docs/research/: T1-google-ai-studio-sdk-findings.md  T2-kilocode-opencode-cli-findings.md  verifier-phase2-findings.md
src/research_pipeline/: __init__.py  __main__.py  config.py  dispatcher.py
src/research_pipeline/clients/: __init__.py  agent_cli.py  gemma.py
tasks/: smoke.md  task.md
tests/: __init__.py  test_agent_cli.py
tickets/: P2-T1-quality-criteria-grilling.md  P2-T2-hermes-minimax-headless.md  P2-T3-eval-corpus.md  P2-T4-layer-a-gates.md  P2-T5-verifier-mvp-prototype.md  P2-T6-eval-and-tune.md  T1-google-ai-studio-sdk.md  T2-kilocode-opencode-cli.md  T3-project-scaffolding.md  T4-prototype-dispatcher.md  T5-model-id-grilling.md
